k07-networking/deny-all-ubuntu.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-traffic-to-ubuntu
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: ubuntu
  policyTypes:
  - Ingress
  - Egress
  ingress: []
  egress: []
