k07-networking/ipblock.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-traffic-to-8.8.8.8-443
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: ubuntu
  policyTypes:
  - Egress
  ingress: []  # Allow all ingress traffic
  egress:
  - ports:
    - port: 443
      protocol: TCP
  - to:
    - ipBlock:
        cidr: 8.8.8.8/32
